Añadiendo cosas a la documentacion de scribe y ruta para poder acceder aparte de generarse el html en la carpeta public
